fix(html) add doctype and fix HTML errors
* Changed render mode to standard compliant and adjusted CSS accordantly.

* Fixed HTML errors, removed XHTML reminiscences and whitespace.

* Added doctype and fixed a few HTML errors.

* The input field speakerStatsSearch overflows the dialog box. Added missing box-sizing.

--- a/css/_videolayout_default.scss
+++ b/css/_videolayout_default.scss
@@ -23,6 +23,10 @@
     overflow: hidden;
 }
 
+.jBzxHz, #react {
+    height: 100%;
+}
+
 #largeVideoBackgroundContainer,
 .large-video-background {
     height: 100%;
